<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ble_remote_control_accessibility_device_connected_txt">Bluetooth remote control is connected</string>
    <string name="ble_remote_control_accessibility_device_disconnected_txt">Bluetooth remote control is disconnected</string>
    <string name="ble_remote_control_accessibility_endurance_mode_available_txt">Camera endurance mode is enabled</string>
    <string name="ble_remote_control_accessibility_endurance_mode_unavailable_txt">Camera endurance mode is disabled</string>
    <string name="ble_remote_control_button_any_problem_txt">Troubleshooting</string>
    <string name="ble_remote_control_button_pair_new_controller_txt">Pair new controller</string>
    <string name="ble_remote_control_c1_button_custom_description_txt">You can assign another function to the C1 button on the Bluetooth remote control</string>
    <string name="ble_remote_control_c1_button_custom_title_txt">C1 button customization</string>
    <string name="ble_remote_control_c1_photopro_focus_mode_changed_txt">Changed to %1$s</string>
    <string name="ble_remote_control_c1_photopro_focus_mode_txt">Focus mode</string>
    <string name="ble_remote_control_c1_photopro_lens_txt">Lens</string>
    <string name="ble_remote_control_c1_photopro_shooting_mode_txt">Shooting mode</string>
    <string name="ble_remote_control_c1_photopro_switch_main_front_txt">Switch main/front camera</string>
    <string name="ble_remote_control_c1_photopro_switch_photo_video_txt">Switch photo/video</string>
    <string name="ble_remote_control_cta_dialog_button_allow_txt">Allow</string>
    <string name="ble_remote_control_cta_dialog_button_deny_txt">Deny</string>
    <string name="ble_remote_control_cta_dialog_text_txt">Allow the app to use Bluetooth for this feature?</string>
    <string name="ble_remote_control_description_txt">"You can pair a Sony remote control via Bluetooth to remotely use functions in %1$s.
Tap Pair new controller to start pairing a new device."</string>
    <string name="ble_remote_control_dialog_already_paired_txt">Already paired</string>
    <string name="ble_remote_control_dialog_any_problem_text_txt">If the remote could not be paired with the device, go to Settings and check if the remote is already registered in the Bluetooth device list. If already registered, remove the remote from the list and try pairing it again.</string>
    <string name="ble_remote_control_dialog_any_problem_title_txt">Troubleshooting</string>
    <string name="ble_remote_control_dialog_button_agree_and_turn_on_txt">Agree and turn on</string>
    <string name="ble_remote_control_dialog_button_decline_txt">Decline</string>
    <string name="ble_remote_control_dialog_button_exit_txt">Exit</string>
    <string name="ble_remote_control_dialog_button_go_to_settings_txt">Go to Settings</string>
    <string name="ble_remote_control_dialog_button_ok_txt">OK</string>
    <string name="ble_remote_control_dialog_error_bluetooth_off_txt">Pairing canceled because Bluetooth was turned off</string>
    <string name="ble_remote_control_dialog_error_timeout_txt">Pairing failed due to timeout. Try again later.</string>
    <string name="ble_remote_control_endurance_mode_description_1_txt">This device may limit certain functions as a precaution when under intensive use. If you turn on Camera endurance mode, an icon will be displayed to indicate that the app will maintain high performance. When this icon is displayed, you can use the app for a longer period of time.</string>
    <string name="ble_remote_control_endurance_mode_description_2_txt">Camera endurance mode is only available when using %1$s with a remote control connected via Bluetooth. Closing %1$s will disable this function.</string>
    <string name="camera_strings_accessibility_a_b_value_txt">A B</string>
    <string name="camera_strings_accessibility_g_m_value_txt">G M</string>
    <string name="camera_strings_exposure_compensation_fullname_txt">Exposure compensation</string>
    <string name="camera_strings_rec_time_extension_guide_notification_button_do_not_show_again_txt">"Don't show again"</string>
    <string name="camera_strings_rec_time_extension_guide_notification_button_open_txt">Open</string>
    <string name="camera_strings_rec_time_extension_guide_notification_text_txt">Open a guide on how to prevent temperature increase while using the app</string>
    <string name="camera_strings_rec_time_extension_guide_notification_title_txt">Device temperature has increased</string>
    <string name="camera_strings_ruler_label_exposure_value_negative_txt">−</string>
    <string name="camera_strings_ruler_label_exposure_value_plus_txt">+</string>
    <string name="camera_strings_whitebalance_adjust_abgm_ab_colon_txt">AB:</string>
    <string name="camera_strings_whitebalance_adjust_abgm_gm_colon_txt">GM:</string>
    <string name="camera_strings_whitebalance_button_adjust_txt">Adjust</string>
    <string name="camera_strings_whitebalance_button_done_txt">Done</string>
    <string name="camera_strings_whitebalance_button_retry_txt">Retry</string>
    <string name="camera_strings_whitebalance_cwb_successful_txt">Adjustment complete</string>
    <string name="camera_strings_whitebalance_temperature_colon_txt">Temp:</string>
    <string name="camera_strings_youtube_live_event_audience_for_adults_txt">Not for kids</string>
    <string name="camera_strings_youtube_live_event_audience_for_kids_txt">For kids</string>
    <string name="camera_strings_youtube_live_event_audience_txt">Audience</string>
    <string name="camera_strings_youtube_live_event_date_txt">Date</string>
    <string name="camera_strings_youtube_live_event_latency_low_txt">Low</string>
    <string name="camera_strings_youtube_live_event_latency_normal_txt">Normal</string>
    <string name="camera_strings_youtube_live_event_latency_txt">Latency</string>
    <string name="camera_strings_youtube_live_event_privacy_private_txt">Private</string>
    <string name="camera_strings_youtube_live_event_privacy_public_txt">Public</string>
    <string name="camera_strings_youtube_live_event_privacy_txt">Privacy</string>
    <string name="camera_strings_youtube_live_event_privacy_unlisted_txt">Unlisted</string>
    <string name="camera_strings_youtube_live_event_time_txt">Time</string>
    <string name="debug_preference_entry_title_auto_power_off">Disable Auto Power Off Timer</string>
    <string name="debug_preference_entry_title_camera_settings">Camera Settings</string>
    <string name="debug_preference_entry_title_device_state_transition_restricted">Throw exception if there are illegal state transition</string>
    <string name="debug_preference_entry_title_enable_virtual_remain_size">Enable virtual remain size</string>
    <string name="debug_preference_entry_title_endurance_mode_without_remote_controller">Endurance mode without remote controller</string>
    <string name="debug_preference_entry_title_force_activate_cool_mode">Force activate cool mode</string>
    <string name="debug_preference_entry_title_force_migrate_settings">Force migrate settings</string>
    <string name="debug_preference_entry_title_launch_with_one_shot_photo_mode">Launch with one-shot photo mode</string>
    <string name="debug_preference_entry_title_launch_with_one_shot_video_mode">Launch with one-shot video mode</string>
    <string name="debug_preference_entry_title_low_power_mode">Disable low power mode on high temp</string>
    <string name="debug_preference_entry_title_set_virtual_remain_size">Set virtual remain size (MB)</string>
    <string name="debug_preference_entry_title_simulate_cta_app">Simulate MLC app</string>
    <string name="debug_preference_entry_title_simulate_sd_card_error">Simulate SD card error</string>
    <string name="debug_preference_entry_title_sub_preview_repeat_fold_collapse">Sub preview repeat fold collapse</string>
    <string name="debug_preference_entry_title_zoom_max_ratio_x3_limitation">Disable max zoom ratio x3 limitation</string>
    <string name="debug_preference_title_debug_mode">Debug Mode</string>
    <string name="debug_preference_title_handling_warning">Handling Warning</string>
    <string name="key_debug_camera_settings">KEY_DEBUG_CHANGE_CAMERA_SETTINGS</string>
    <string name="key_debug_device_state_transition_restricted">KEY_DEBUG_DEVICE_STATE_TRANSITION_RESTRICTED</string>
    <string name="key_debug_disable_auto_power_off">KEY_DEBUG_DISABLE_AUTO_POWER_OFF</string>
    <string name="key_debug_disable_low_power_mode">KEY_DEBUG_DISABLE_LOW_POWER_MODE</string>
    <string name="key_debug_enable_virtual_remain_size">KEY_DEBUG_ENABLE_VIRTUAL_REMAIN_SIZE</string>
    <string name="key_debug_endurance_mode_without_remote_controller">KEY_DEBUG_ENDURANCE_MODE_WITHOUT_REMOTE_CONTROLLER</string>
    <string name="key_debug_force_activate_cool_mode">KEY_DEBUG_FORCE_ACTIVATE_COOL_MODE</string>
    <string name="key_debug_force_migrate_settings">KEY_DEBUG_FORCE_MIGRATE_SETTINGS</string>
    <string name="key_debug_launch_with_one_shot_photo_mode">KEY_DEBUG_LAUNCH_WITH_ONE_SHOT_PHOTO_MODE</string>
    <string name="key_debug_launch_with_one_shot_video_mode">KEY_DEBUG_LAUNCH_WITH_ONE_SHOT_VIDEO_MODE</string>
    <string name="key_debug_set_virtual_remain_size">KEY_DEBUG_SET_VIRTUAL_REMAIN_SIZE</string>
    <string name="key_debug_simulate_cta_app">KEY_DEBUG_SIMULATE_CTA_APP</string>
    <string name="key_debug_simulate_sd_card_error">KEY_DEBUG_SIMULATE_SD_CARD_ERROR</string>
    <string name="key_debug_sub_preview_repeat_fold_collapse">KEY_DEBUG_SUB_PREVIEW_REPEAT_FOLD_COLLAPSE</string>
    <string name="key_debug_zoom_max_ratio_x3_limitation">KEY_DEBUG_DISABLE_MAX_ZOOM_RATIO_TO_X3_LIMITATION</string>
</resources>