<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/notification_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/camera_strings_rec_time_extension_guide_notification_title_txt" style="@style/TextAppearance.Compat.Notification.Title" />
    <TextView android:layout_gravity="center" android:id="@id/notification_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/camera_strings_rec_time_extension_guide_notification_text_txt" style="@style/TextAppearance.Compat.Notification.Info" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <CheckBox android:id="@id/do_not_show_again" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/camera_strings_rec_time_extension_guide_notification_button_do_not_show_again_txt" android:layout_weight="0.7" style="@style/TextAppearance.Compat.Notification.Info" />
        <Button android:id="@id/open_recommended_settings" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/camera_strings_rec_time_extension_guide_notification_button_open_txt" android:layout_weight="0.3" />
    </LinearLayout>
</LinearLayout>
