<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/scroll_contents" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/date_time_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/camera_youtube_live_event_right_pane_date_time_area_margin_top">
            <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/date_time_center" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="@dimen/camera_youtube_live_event_right_pane_date_time_percent" />
            <TextView android:textSize="@dimen/camera_font_size_sp_2" android:textColor="@color/camera_gray03_color" android:id="@id/item_date" android:layout_width="@dimen/camera_youtube_live_event_right_pane_date_time_width" android:layout_height="wrap_content" android:text="@string/camera_strings_youtube_live_event_date_txt" android:textDirection="locale" android:layout_marginEnd="@dimen/camera_youtube_live_event_right_pane_item_date_margin_end" app:layout_constraintEnd_toStartOf="@id/date_time_center" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="@dimen/camera_font_size_sp_3" android:textColor="@color/camera_white_color" android:id="@id/date" android:background="@drawable/camera_dialog_edit_description_background" android:padding="@dimen/camera_youtube_live_event_right_pane_date_time_padding" android:focusable="true" android:focusableInTouchMode="false" android:clickable="true" android:layout_width="@dimen/camera_youtube_live_event_right_pane_date_time_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/camera_youtube_live_event_right_pane_date_margin_top" android:layout_marginEnd="@dimen/camera_youtube_live_event_right_pane_date_margin_end" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/date_time_center" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/item_date" style="@style/Widget.Camera.Menu.Button" />
            <TextView android:textSize="@dimen/camera_font_size_sp_2" android:textColor="@color/camera_gray03_color" android:id="@id/item_time" android:layout_width="@dimen/camera_youtube_live_event_right_pane_date_time_width" android:layout_height="wrap_content" android:text="@string/camera_strings_youtube_live_event_time_txt" android:textDirection="locale" android:layout_marginStart="@dimen/camera_youtube_live_event_right_pane_item_time_margin_start" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/date_time_center" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="@dimen/camera_font_size_sp_3" android:textColor="@color/camera_white_color" android:id="@id/time" android:background="@drawable/camera_dialog_edit_description_background" android:padding="@dimen/camera_youtube_live_event_right_pane_date_time_padding" android:focusable="true" android:focusableInTouchMode="false" android:clickable="true" android:layout_width="@dimen/camera_youtube_live_event_right_pane_date_time_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/camera_youtube_live_event_right_pane_time_margin_top" android:layout_marginStart="@dimen/camera_youtube_live_event_right_pane_time_margin_start" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/date_time_center" app:layout_constraintTop_toBottomOf="@id/item_time" style="@style/Widget.Camera.Menu.Button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:textSize="@dimen/camera_font_size_sp_2" android:textColor="@color/camera_gray03_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/camera_youtube_live_event_right_pane_audience_title_margin_top" android:text="@string/camera_strings_youtube_live_event_audience_txt" app:layout_constraintTop_toBottomOf="@id/date_time_area" />
        <RadioGroup android:id="@id/audience" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/camera_youtube_live_event_right_pane_audience_margin_top">
            <RadioButton android:textSize="@dimen/camera_font_size_sp_3" android:textColor="@color/camera_white_color" android:id="@id/audience_kids" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/camera_youtube_live_event_right_pane_radio_height" android:text="@string/camera_strings_youtube_live_event_audience_for_kids_txt" android:paddingStart="@dimen/camera_youtube_live_event_right_pane_radio_padding_start" />
            <RadioButton android:textSize="@dimen/camera_font_size_sp_3" android:textColor="@color/camera_white_color" android:id="@id/audience_adults" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/camera_youtube_live_event_right_pane_radio_height" android:text="@string/camera_strings_youtube_live_event_audience_for_adults_txt" android:paddingStart="@dimen/camera_youtube_live_event_right_pane_radio_padding_start" />
        </RadioGroup>
        <TextView android:textSize="@dimen/camera_font_size_sp_2" android:textColor="@color/camera_gray03_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/camera_youtube_live_event_right_pane_privacy_item_margin_top" android:text="@string/camera_strings_youtube_live_event_privacy_txt" />
        <RadioGroup android:id="@id/privacy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/camera_youtube_live_event_right_pane_privacy_margin_top">
            <RadioButton android:textSize="@dimen/camera_font_size_sp_3" android:textColor="@color/camera_white_color" android:id="@id/privacy_private" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:minHeight="@dimen/camera_youtube_live_event_right_pane_radio_height" android:text="@string/camera_strings_youtube_live_event_privacy_private_txt" android:paddingStart="@dimen/camera_youtube_live_event_right_pane_radio_padding_start" />
            <RadioButton android:textSize="@dimen/camera_font_size_sp_3" android:textColor="@color/camera_white_color" android:id="@id/privacy_unlisted" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/camera_youtube_live_event_right_pane_radio_height" android:text="@string/camera_strings_youtube_live_event_privacy_unlisted_txt" android:paddingStart="@dimen/camera_youtube_live_event_right_pane_radio_padding_start" />
            <RadioButton android:textSize="@dimen/camera_font_size_sp_3" android:textColor="@color/camera_white_color" android:id="@id/privacy_public" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/camera_youtube_live_event_right_pane_radio_height" android:text="@string/camera_strings_youtube_live_event_privacy_public_txt" android:paddingStart="@dimen/camera_youtube_live_event_right_pane_radio_padding_start" />
        </RadioGroup>
        <TextView android:textSize="@dimen/camera_font_size_sp_2" android:textColor="@color/camera_gray03_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/camera_youtube_live_event_right_pane_latency_title_margin_top" android:text="@string/camera_strings_youtube_live_event_latency_txt" />
        <RadioGroup android:id="@id/latency" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/camera_youtube_live_event_right_pane_latency_margin_top">
            <RadioButton android:textSize="@dimen/camera_font_size_sp_3" android:textColor="@color/camera_white_color" android:id="@id/latency_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:minHeight="@dimen/camera_youtube_live_event_right_pane_radio_height" android:text="@string/camera_strings_youtube_live_event_latency_normal_txt" android:paddingStart="@dimen/camera_youtube_live_event_right_pane_radio_padding_start" />
            <RadioButton android:textSize="@dimen/camera_font_size_sp_3" android:textColor="@color/camera_white_color" android:id="@id/latency_low" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/camera_youtube_live_event_right_pane_radio_height" android:text="@string/camera_strings_youtube_live_event_latency_low_txt" android:paddingStart="@dimen/camera_youtube_live_event_right_pane_radio_padding_start" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
