<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_pro_mode_fn_submenu_wb_confirm_0" android:background="@drawable/camera_pro_mode_fn_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="@style/TextAppearance.PhotoPro.Body1" android:gravity="center_horizontal" android:id="@id/explain_text" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/camera_submenu_wb_title_margin_top" android:text="@string/camera_strings_whitebalance_cwb_successful_txt" android:breakStrategy="balanced" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/confirm_abgm_adjust" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="@dimen/camera_submenu_wb_confirm_horizontal_margin" android:layout_marginEnd="@dimen/camera_submenu_wb_confirm_horizontal_margin" app:layout_constraintBottom_toTopOf="@id/retry_and_done_btn" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/explain_text">
        <LinearLayout android:orientation="vertical" android:id="@id/confirm_abgm_text" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginEnd="@dimen/camera_submenu_wb_confirm_horizontal_margin" app:layout_constraintEnd_toStartOf="@id/confirm_button_adjust" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent">
            <LinearLayout android:orientation="horizontal" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.PhotoPro.Body1" android:gravity="center_vertical" android:layout_width="@dimen/camera_whitebalance_temperature_colon_text_size" android:layout_height="wrap_content" android:text="@string/camera_strings_whitebalance_temperature_colon_txt" android:importantForAccessibility="no" />
                <TextView android:textAppearance="@style/TextAppearance.PhotoPro.Body1" android:gravity="center_vertical" android:id="@id/confirm_temperature" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.PhotoPro.Body1" android:gravity="center_vertical" android:layout_width="@dimen/camera_submenu_button_size" android:layout_height="wrap_content" android:text="@string/camera_strings_whitebalance_adjust_abgm_ab_colon_txt" android:contentDescription="@string/camera_strings_accessibility_a_b_value_txt" android:layout_marginEnd="@dimen/camera_submenu_wb_confirm_abgm_text_margin_end" />
                <TextView android:textAppearance="@style/TextAppearance.PhotoPro.Body1" android:gravity="center_vertical" android:id="@id/confirm_ab" android:layout_width="@dimen/camera_submenu_abgm_top_text_ab_width" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.PhotoPro.Body1" android:gravity="center_vertical" android:layout_width="@dimen/camera_submenu_button_size" android:layout_height="wrap_content" android:text="@string/camera_strings_whitebalance_adjust_abgm_gm_colon_txt" android:contentDescription="@string/camera_strings_accessibility_g_m_value_txt" android:layout_marginEnd="@dimen/camera_submenu_wb_confirm_abgm_text_margin_end" />
                <TextView android:textAppearance="@style/TextAppearance.PhotoPro.Body1" android:gravity="center_vertical" android:id="@id/confirm_gm" android:layout_width="@dimen/camera_submenu_abgm_top_text_gm_width" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <Button android:id="@id/confirm_button_adjust" android:layout_width="@dimen/camera_submenu_abgm_adjust_button_width" android:layout_height="@dimen/camera_submenu_abgm_button_height" android:minWidth="@dimen/camera_submenu_bordered_button_min_width" android:text="@string/camera_strings_whitebalance_button_adjust_txt" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" style="@style/Widget.Camera.TextButton.White_Balance" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <jp.co.sony.mc.camera.view.widget.TextWidthAlignConstraintLayout android:id="@id/retry_and_done_btn" android:layout_width="wrap_content" android:layout_height="@dimen/camera_submenu_abgm_button_height" android:layout_marginBottom="@dimen/camera_submenu_abgm_button_margin_bottom" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <Button android:gravity="center" android:id="@id/retry_btn" android:layout_width="@dimen/camera_submenu_abgm_button_width" android:layout_height="@dimen/camera_submenu_abgm_button_height" android:text="@string/camera_strings_whitebalance_button_retry_txt" android:lines="1" android:paddingStart="4.0dip" android:paddingEnd="4.0dip" android:layout_marginEnd="@dimen/camera_submenu_abgm_button_horizontal_margin" android:autoSizeTextType="uniform" android:autoSizeStepGranularity="1.0sp" android:autoSizeMinTextSize="12.0dip" android:autoSizeMaxTextSize="16.0dip" app:layout_constraintEnd_toStartOf="@id/done_btn" app:layout_constraintStart_toStartOf="parent" style="@style/Widget.Camera.TextButton.White_Balance" />
        <Button android:id="@id/done_btn" android:layout_width="@dimen/camera_submenu_abgm_button_width" android:layout_height="@dimen/camera_submenu_abgm_button_height" android:minWidth="@dimen/camera_submenu_bordered_button_min_width" android:text="@string/camera_strings_whitebalance_button_done_txt" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/retry_btn" style="@style/Widget.Camera.TextButton.White_Balance" />
    </jp.co.sony.mc.camera.view.widget.TextWidthAlignConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
