<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/memory_recall_left_panel_ev" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" android:layoutDirection="ltr">
        <ImageView android:id="@id/imageView" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@string/camera_strings_exposure_compensation_fullname_txt" app:layout_constraintBottom_toBottomOf="@id/ev_slider" app:layout_constraintEnd_toStartOf="@id/minus" app:srcCompat="@drawable/camera_footer_ev_icn" />
        <TextView android:id="@id/minus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/camera_strings_ruler_label_exposure_value_negative_txt" android:includeFontPadding="true" app:layout_constraintBottom_toBottomOf="@id/ev_slider" app:layout_constraintEnd_toStartOf="@id/ev_slider" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" style="@style/Widget.PhotoPro.DialPicker.Item" />
        <jp.co.sony.mc.camera.view.widget.FixedEvSlider android:id="@id/ev_slider" android:layout_width="0.0dip" android:layout_height="@dimen/memory_recall_ev_slider_height" android:max="6" android:progressDrawable="@null" android:thumb="@drawable/camera_right_dial_scale_pointer_down_mono" android:layoutDirection="ltr" android:min="-6" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/plus" app:layout_constraintStart_toEndOf="@id/minus" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="@dimen/camera_ev_slider_width" />
        <TextView android:id="@id/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/camera_strings_ruler_label_exposure_value_plus_txt" android:includeFontPadding="true" app:layout_constraintBottom_toBottomOf="@id/ev_slider" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/ev_slider" style="@style/Widget.PhotoPro.DialPicker.Item" />
        <androidx.constraintlayout.widget.Group android:id="@id/ev_slider_group" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="imageView,minus,plus,ev_slider" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>
